tests/paczka1/fuzzy1/41283171.err
Error in line 3: S286 S286 45,5
Error in line 1: RZjWDN S286 24,6
Error in line 10: bYQ9 S286 58,8
Error in line 15: Y29kP40Ybgt S286 55,0
Error in line 31: bYQ9 A385 55,6
Error in line 35: bYQ9 S286 33,5
